--- a/docs/index.ipynb
+++ b/docs/index.ipynb
@@ -23,10 +23,10 @@
    "metadata": {
     "editable": true,
     "execution": {
-     "iopub.execute_input": "2025-09-30T17:23:23.471931Z",
-     "iopub.status.busy": "2025-09-30T17:23:23.470896Z",
-     "iopub.status.idle": "2025-09-30T17:23:23.487005Z",
-     "shell.execute_reply": "2025-09-30T17:23:23.484979Z"
+     "iopub.execute_input": "2025-10-02T01:47:48.478081Z",
+     "iopub.status.busy": "2025-10-02T01:47:48.477262Z",
+     "iopub.status.idle": "2025-10-02T01:47:48.493813Z",
+     "shell.execute_reply": "2025-10-02T01:47:48.491223Z"
     },
     "slideshow": {
      "slide_type": ""
@@ -99,10 +99,10 @@
    "id": "1941eaa6-db2f-42e3-99f6-d4254beab727",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-30T17:23:23.494010Z",
-     "iopub.status.busy": "2025-09-30T17:23:23.493341Z",
-     "iopub.status.idle": "2025-09-30T17:23:24.154566Z",
-     "shell.execute_reply": "2025-09-30T17:23:24.153828Z"
+     "iopub.execute_input": "2025-10-02T01:47:48.501057Z",
+     "iopub.status.busy": "2025-10-02T01:47:48.500480Z",
+     "iopub.status.idle": "2025-10-02T01:47:49.201899Z",
+     "shell.execute_reply": "2025-10-02T01:47:49.201140Z"
     }
    },
    "outputs": [],
@@ -169,7 +169,7 @@
     "   :maxdepth: 2\n",
     "   :hidden:\n",
     "\n",
-    "   content/user/user.md\n",
+    "   content/user/index.md\n",
     "\n",
     ".. toctree::\n",
     "   :maxdepth: 2\n",
