--- a/sandbox/test_1tcd.ipynb
+++ b/sandbox/test_1tcd.ipynb
@@ -9,7 +9,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "689d509be1ac49c8801a875fe7789961",
+       "model_id": "9b18ab2948d342a8bbf2414d5ee98f61",
        "version_major": 2,
        "version_minor": 0
       },
@@ -35,6 +35,56 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "aca052ae-e9a7-4594-aea2-5dd72dfca825",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "topography = pom.io.load_CASTp(dir_path=\"castp/1tcd\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf19af6f-9aa3-419c-9060-744762191632",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "topography."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4af38a3f-75a1-49b2-ad1f-5375a5c52871",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pocket.n_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8d9f032-549b-4326-b2fc-ed1d33fbaa22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mouth = topography.mouths[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a50e49eb-0f78-4795-9e69-391fd07d7551",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mouth.n_triangles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "75d39f23-0fc5-41a3-a528-7a5f76a766fb",
    "metadata": {},
    "outputs": [],
@@ -44,24 +94,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "52006de3-8862-4942-b07e-5be8898af24c",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "The argument points needs to be a numpy array with shape (n_points, 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mpom\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_alpha_spheres\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmolsys\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mselection\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mmolecule_type==\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mprotein\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/repos@uibcdf/pocketmt/pocketmt/get_alpha_spheres.py:9\u001b[39m, in \u001b[36mget_alpha_spheres\u001b[39m\u001b[34m(molecular_system, selection)\u001b[39m\n\u001b[32m      7\u001b[39m molecular_system = msm.convert(molecular_system, to_form=\u001b[33m'\u001b[39m\u001b[33mmolsysmt.MolSys\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      8\u001b[39m atom_centers = msm.get(molecular_system, selection=selection, element=\u001b[33m'\u001b[39m\u001b[33matom\u001b[39m\u001b[33m'\u001b[39m, coordinates=\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m alpha_spheres = \u001b[43mAlphaSpheres\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpoints\u001b[49m\u001b[43m=\u001b[49m\u001b[43matom_centers\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     11\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m alpha_spheres\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/repos@uibcdf/pocketmt/pocketmt/alpha_spheres/alpha_spheres.py:67\u001b[39m, in \u001b[36mAlphaSpheres.__init__\u001b[39m\u001b[34m(self, points)\u001b[39m\n\u001b[32m     65\u001b[39m     \u001b[38;5;28;01mpass\u001b[39;00m\n\u001b[32m     66\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m---> \u001b[39m\u001b[32m67\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mThe argument points needs to be a numpy array with shape (n_points, 3)\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     69\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m (\u001b[38;5;28mlen\u001b[39m(points.shape)!=\u001b[32m2\u001b[39m) \u001b[38;5;129;01mand\u001b[39;00m (points.shape[\u001b[32m1\u001b[39m]!=\u001b[32m3\u001b[39m):\n\u001b[32m     70\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mThe argument points needs to be a numpy array with shape (n_points, 3)\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mValueError\u001b[39m: The argument points needs to be a numpy array with shape (n_points, 3)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pom.get_alpha_spheres(molsys, selection='molecule_type==\"protein\"')"
    ]
@@ -78,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "89fbdb81-3307-474a-8626-6275e37dd68f",
    "metadata": {},
    "outputs": [],
@@ -88,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e2f5c70f-44a9-49e2-bc72-6aa5f3dbcbaa",
    "metadata": {},
    "outputs": [],
@@ -98,42 +134,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "355798b7-283b-4943-9921-54cb092f124c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "puw.is_quantity(coordinates)"
+    "puw.get_value_and_unit(coordinates)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "1f0b8d24-8be3-4d0c-96f8-7467d3864350",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "puw.check(coordinates, dimensionality={'[L]':1})"
    ]
