--- a/sandbox/test_1tcd.ipynb
+++ b/sandbox/test_1tcd.ipynb
@@ -9,7 +9,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a02c84d92e9345a98444da77ef35941b",
+       "model_id": "f5c179563bb642c7909685961c3299ff",
        "version_major": 2,
        "version_minor": 0
       },
@@ -30,6 +30,52 @@
    "source": [
     "import molsysmt as msm\n",
     "import topomt as tmt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "79772ff7-1827-41ce-ab37-7170fade6fa0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from topomt import Topography\n",
+    "from topomt.features.Cavity import Cavity\n",
+    "from topomt.features.Mouth import Mouth\n",
+    "\n",
+    "topo = Topography()\n",
+    "\n",
+    "cav = Cavity(feature_id=\"cav_1\", index=0)\n",
+    "mth = Mouth(feature_id=\"mouth_1\", index=0)\n",
+    "\n",
+    "topo.register(cav)\n",
+    "topo.register(mth)\n",
+    "\n",
+    "topo.link(\"mouth_1\", \"cav_1\")\n",
+    "\n",
+    "assert \"mouth_1\" in cav.boundary_ids   # sincronizado\n",
+    "parents = topo.parents_of(\"mouth_1\")   # devuelve (cav,)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c5b5d95a-1738-40ec-80dc-eaf1e7c4c850",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(<Feature feature_index=0 feature_type=cavity type_index=0 type_id=None>,)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "topo.parents_of(\"mouth_1\")"
    ]
   },
   {
