Working with first tests

--- a/sandbox/test_1tcd.ipynb
+++ b/sandbox/test_1tcd.ipynb
@@ -9,7 +9,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9109371964234030a434000fef1a230b",
+       "model_id": "1fdd7212f3074a769366d15a372ca350",
        "version_major": 2,
        "version_minor": 0
       },
@@ -35,45 +35,103 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "aca052ae-e9a7-4594-aea2-5dd72dfca825",
+   "id": "880f8096-ee70-426c-866a-e3277e56d37e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pdb_file = tmt.demo['TcTIM']['1tcd.pdb']\n",
+    "topography = tmt.Topography(molecular_system=pdb_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "33e619e4-083f-45c4-9bed-9674286d8089",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "Cavity.__init__() got an unexpected keyword argument 'type_index'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m topography = \u001b[43mtmt\u001b[49m\u001b[43m.\u001b[49m\u001b[43mio\u001b[49m\u001b[43m.\u001b[49m\u001b[43mload_CASTp\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdir_path\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mcastp/1tcd\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/repos@uibcdf/topomt/topomt/io/load_CASTp.py:286\u001b[39m, in \u001b[36mload_CASTp\u001b[39m\u001b[34m(poc_file, pocInfo_file, mouth_file, mouthInfo_file, pdb_file, zip_file, dir_path, molecular_system)\u001b[39m\n\u001b[32m    284\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m type_index, poc_id \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(\u001b[38;5;28msorted\u001b[39m(pocket_atoms)):\n\u001b[32m    285\u001b[39m     feature_id = \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mcastp-pocket-\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpoc_id\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m\n\u001b[32m--> \u001b[39m\u001b[32m286\u001b[39m     pocket = \u001b[43mPocket\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    287\u001b[39m \u001b[43m        \u001b[49m\u001b[43matom_indices\u001b[49m\u001b[43m=\u001b[49m\u001b[43mpocket_atoms\u001b[49m\u001b[43m[\u001b[49m\u001b[43mpoc_id\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    288\u001b[39m \u001b[43m        \u001b[49m\u001b[43mmouth_index\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[32m    289\u001b[39m \u001b[43m        \u001b[49m\u001b[43mindex\u001b[49m\u001b[43m=\u001b[49m\u001b[43mtype_index\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    290\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43mid\u001b[39;49m\u001b[43m=\u001b[49m\u001b[43mpoc_id\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    291\u001b[39m \u001b[43m        \u001b[49m\u001b[43mfeature_id\u001b[49m\u001b[43m=\u001b[49m\u001b[43mfeature_id\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    292\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    293\u001b[39m     pocket.mouth_indices = []\n\u001b[32m    294\u001b[39m     pocket.n_mouths = \u001b[32m0\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/repos@uibcdf/topomt/topomt/features/Pocket.py:7\u001b[39m, in \u001b[36mPocket.__init__\u001b[39m\u001b[34m(self, atom_indices, mouth_index, index, id, shape_index, shape_id, feature_index, feature_id)\u001b[39m\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, atom_indices=\u001b[38;5;28;01mNone\u001b[39;00m, mouth_index=\u001b[38;5;28;01mNone\u001b[39;00m, index=\u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;28mid\u001b[39m=\u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[32m      6\u001b[39m              shape_index=\u001b[38;5;28;01mNone\u001b[39;00m, shape_id=\u001b[38;5;28;01mNone\u001b[39;00m, feature_index=\u001b[38;5;28;01mNone\u001b[39;00m, feature_id=\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m     \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[34;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43matom_indices\u001b[49m\u001b[43m=\u001b[49m\u001b[43matom_indices\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmouth_indices\u001b[49m\u001b[43m=\u001b[49m\u001b[43m[\u001b[49m\u001b[43mmouth_index\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn_mouths\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m      8\u001b[39m \u001b[43m                     \u001b[49m\u001b[43mfeature_index\u001b[49m\u001b[43m=\u001b[49m\u001b[43mfeature_index\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfeature_id\u001b[49m\u001b[43m=\u001b[49m\u001b[43mfeature_id\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mshape_index\u001b[49m\u001b[43m=\u001b[49m\u001b[43mshape_index\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mshape_id\u001b[49m\u001b[43m=\u001b[49m\u001b[43mshape_id\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      9\u001b[39m \u001b[43m                     \u001b[49m\u001b[43mtype_index\u001b[49m\u001b[43m=\u001b[49m\u001b[43mindex\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtype_id\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mid\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m     10\u001b[39m     \u001b[38;5;28mself\u001b[39m.feature_type = \u001b[33m\"\u001b[39m\u001b[33mpocket\u001b[39m\u001b[33m\"\u001b[39m\n",
-      "\u001b[31mTypeError\u001b[39m: Cavity.__init__() got an unexpected keyword argument 'type_index'"
-     ]
+     "data": {
+      "text/plain": [
+       "'POC-1'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "topography.add_new_feature(feature_type='pocket', atom_indices=[1,2,3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "c50cb220-ffa3-427b-a9fa-80d85a9b32f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_feature = topography.features['POC-1']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "d1b0019e-f49a-47df-b6ac-01a3b7935609",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set()"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "topography.get_features_by_dimensionality(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "9315d19e-ac44-4665-9251-ddc62a4700fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2d'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_feature.dimensionality"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aca052ae-e9a7-4594-aea2-5dd72dfca825",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "topography = tmt.io.load_CASTp(dir_path=\"castp/1tcd\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "bf19af6f-9aa3-419c-9060-744762191632",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m aa = \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mii\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43maa\u001b[49m\u001b[43m:\u001b[49m\n\u001b[32m      3\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43mprint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43ma\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[31mTypeError\u001b[39m: 'NoneType' object is not iterable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "aa = None\n",
     "for ii in aa:\n",
