--- a/sandbox/test_1tcd.ipynb
+++ b/sandbox/test_1tcd.ipynb
@@ -9,7 +9,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1fdd7212f3074a769366d15a372ca350",
+       "model_id": "5e974fe8fef44070b2c790dea53e23db",
        "version_major": 2,
        "version_minor": 0
       },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "c50cb220-ffa3-427b-a9fa-80d85a9b32f4",
    "metadata": {},
    "outputs": [],
@@ -76,42 +76,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "d1b0019e-f49a-47df-b6ac-01a3b7935609",
+   "execution_count": 10,
+   "id": "5413b990-6d2e-4201-b97f-cee9fe9fd4a7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "set()"
+       "True"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "id(new_feature._topography) == id(topography)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e6ea05ec-7c47-4bbe-b779-8214ba150402",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<topomt.topography.Topography.Topography at 0x74b0a8e20a70>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "topography"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f753ca72-2a02-4358-a38a-b7f7a990888f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1b0019e-f49a-47df-b6ac-01a3b7935609",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "topography.get_features_by_dimensionality(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "9315d19e-ac44-4665-9251-ddc62a4700fa",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2d'"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "new_feature.dimensionality"
    ]
