--- a/sandbox/test_1tcd.ipynb
+++ b/sandbox/test_1tcd.ipynb
@@ -9,7 +9,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5e974fe8fef44070b2c790dea53e23db",
+       "model_id": "d7a3578955b04588b148b55db3a898c2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -35,79 +35,26 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "880f8096-ee70-426c-866a-e3277e56d37e",
+   "id": "aca052ae-e9a7-4594-aea2-5dd72dfca825",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pdb_file = tmt.demo['TcTIM']['1tcd.pdb']\n",
-    "topography = tmt.Topography(molecular_system=pdb_file)"
+    "topography = tmt.io.load_CASTp(dir_path=tmt.demo['TcTIM']['CASTp_1tcd'])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "33e619e4-083f-45c4-9bed-9674286d8089",
+   "id": "6f8eb0dc-b4ea-442c-87d9-f75356c26014",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'POC-1'"
+       "<TopoMT Topography with 120 features>"
       ]
      },
      "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "topography.add_new_feature(feature_type='pocket', atom_indices=[1,2,3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "c50cb220-ffa3-427b-a9fa-80d85a9b32f4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_feature = topography.features['POC-1']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "5413b990-6d2e-4201-b97f-cee9fe9fd4a7",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "id(new_feature._topography) == id(topography)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "e6ea05ec-7c47-4bbe-b779-8214ba150402",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<topomt.topography.Topography.Topography at 0x74b0a8e20a70>"
-      ]
-     },
-     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,199 +65,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f753ca72-2a02-4358-a38a-b7f7a990888f",
+   "execution_count": 9,
+   "id": "fc258813-d0fe-4e35-93b2-1b3f52d9fb58",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d1b0019e-f49a-47df-b6ac-01a3b7935609",
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Topography' object has no attribute 'concavity_types'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mtopography\u001b[49m\u001b[43m.\u001b[49m\u001b[43mconcavity_types\u001b[49m\n",
+      "\u001b[31mAttributeError\u001b[39m: 'Topography' object has no attribute 'concavity_types'"
+     ]
+    }
+   ],
    "source": [
-    "topography.get_features_by_dimensionality(2)"
+    "topography.concavity_types"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9315d19e-ac44-4665-9251-ddc62a4700fa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_feature.dimensionality"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aca052ae-e9a7-4594-aea2-5dd72dfca825",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "topography = tmt.io.load_CASTp(dir_path=\"castp/1tcd\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bf19af6f-9aa3-419c-9060-744762191632",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "aa = None\n",
-    "for ii in aa:\n",
-    "    print('a')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4af38a3f-75a1-49b2-ad1f-5375a5c52871",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pocket.n_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a8d9f032-549b-4326-b2fc-ed1d33fbaa22",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mouth = topography.mouths[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a50e49eb-0f78-4795-9e69-391fd07d7551",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mouth.n_triangles"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "75d39f23-0fc5-41a3-a528-7a5f76a766fb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "molsys = msm.convert('1TCD')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "52006de3-8862-4942-b07e-5be8898af24c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pom.get_alpha_spheres(molsys, selection='molecule_type==\"protein\"')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "874dfcad-d251-4d3f-ba8e-054559dcfefd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "msm.view(molsys)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "89fbdb81-3307-474a-8626-6275e37dd68f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pyunitwizard as puw"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e2f5c70f-44a9-49e2-bc72-6aa5f3dbcbaa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "coordinates = msm.get(molsys, coordinates=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "355798b7-283b-4943-9921-54cb092f124c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "puw.get_value_and_unit(coordinates)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1f0b8d24-8be3-4d0c-96f8-7467d3864350",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "puw.check(coordinates, dimensionality={'[L]':1})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0e4c3397-dcac-4f5f-a813-b49f14c9fd2a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "msm.info(molsys)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fe16a9df-2c85-4daf-af45-f712992bc784",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "msm.view('2LAO')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "682ac7da-ee71-41b1-b1a2-99f876e8d888",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import nglview as nv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "baac3613-4191-46fc-8584-1f3c371069f8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "view = nv.show_pdbid(\"3pqr\")  # load \"3pqr\" from RCSB PDB and display viewer widget\n",
-    "view"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6f8eb0dc-b4ea-442c-87d9-f75356c26014",
+   "id": "e2cac287-6312-47d8-8d01-48e915be07e2",
    "metadata": {},
    "outputs": [],
    "source": []
