--- a/sandbox/test_1tcd.ipynb
+++ b/sandbox/test_1tcd.ipynb
@@ -2,31 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a86f6d35-0d83-4d71-b818-56665333029a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d7a3578955b04588b148b55db3a898c2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": []
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "MOLSYSMT WARNING | UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import molsysmt as msm\n",
     "import topomt as tmt"
@@ -34,55 +13,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "aca052ae-e9a7-4594-aea2-5dd72dfca825",
    "metadata": {},
    "outputs": [],
    "source": [
-    "topography = tmt.io.load_CASTp(dir_path=tmt.demo['TcTIM']['CASTp_1tcd'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "6f8eb0dc-b4ea-442c-87d9-f75356c26014",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<TopoMT Topography with 120 features>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "topography"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "fc258813-d0fe-4e35-93b2-1b3f52d9fb58",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'Topography' object has no attribute 'concavity_types'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mtopography\u001b[49m\u001b[43m.\u001b[49m\u001b[43mconcavity_types\u001b[49m\n",
-      "\u001b[31mAttributeError\u001b[39m: 'Topography' object has no attribute 'concavity_types'"
-     ]
-    }
-   ],
-   "source": [
-    "topography.concavity_types"
+    "topography_castp = tmt.io.load_CASTp(dir_path=tmt.demo['TcTIM']['CASTp_1tcd'])"
    ]
   },
   {
